
        BOOKKEEPER-368: Implementing multiplexing java client. (sijie via ivank)

        BOOKKEEPER-370: implement multiplexing cpp client. (sijie via ivank)

        BOOKKEEPER-453: Extract commonality from MultiplexSubscribeResponseHandler and SimpleSubscribeResponseHandler and put into an abstract class  (sijie via ivank)

Release 4.1.0 - 2012-06-07

  Non-backward compatible changes:

    BUGFIXES:

    IMPROVEMENTS:

  Backward compatible changes:

    BUGFIXES:

      BOOKKEEPER-145: Put notice and license file for distributed binaries in SVN (ivank)

      BOOKKEEPER-254: Bump zookeeper version in poms (ivank)

      BOOKKEEPER-72: Fix warnings issued by FindBugs (ivank)

      BOOKKEEPER-238: Add log4j.properties in conf/ for bin packages (ivank)

      bookkeeper-server/

        BOOKKEEPER-142: Parsing last log id is wrong, which may make entry log files overwritten (Sijie Gou via ivank)

        BOOKKEEPER-141: Run extracting ledger id from entry log files in GC thread to speed up bookie restart (Sijie Gou via ivank)

        BOOKKEEPER-148: Jenkins build is failing (ivank via fpj)

        BOOKKEEPER-40: BookieClientTest fails intermittantly (fpj via ivank)

	BOOKKEEPER-150: Entry is lost when recovering a ledger with not enough bookies. (Sijie Guo via ivank)

        BOOKKEEPER-153: Ledger can't be opened or closed due to zero-length metadata (Sijie Guo via ivank)

        BOOKKEEPER-23: Timeout requests (ivank)

        BOOKKEEPER-161: PerChannelBookieClient tries to reuse HashedWheelTimer, throws Exception (ivank)

        BOOKKEEPER-167: PerChannelBookieClient doesn't use ClientConfiguration (Sijie Guo via ivank)

        BOOKKEEPER-156: BookieJournalRollingTest failing (Sijie Guo via ivank)

	BOOKKEEPER-162: LedgerHandle.readLastConfirmed does not work (fpj)

        BOOKKEEPER-152: Can't recover a ledger whose current ensemble contain failed bookie. (ivank)
